kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: why-kubernetes
  name: why-kubernetes
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: why-kubernetes
